--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,20 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "barryvdh/laravel-dompdf": "^0.8.3",
+        "berkayk/onesignal-laravel": "^1.0",
+        "bugsnag/bugsnag-laravel": "^2.0",
+        "cviebrock/eloquent-sluggable": "^4.5",
+        "doctrine/dbal": "^2.8",
+        "google/apiclient": "^2.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.4",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "milon/barcode": "^5.3",
+        "orchestra/imagine": "^3.6",
+        "predis/predis": "^1.1",
+        "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
@@ -25,7 +38,10 @@
         "psr-4": {
             "App\\": "app/",
             "Main\\": "main/"
-        }
+        },
+        "files": [
+            "Main/Support/CustomHelpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
